waybar/style.css
/* ~/.config/waybar/style.css */

* {
    border: none;
    border-radius: 0;
    font-family: "SauceCodePro Nerd Font", sans-serif;
    font-size: 14px;
    min-height: 0;
}

window#waybar {
    background: transparent;
    color: #cdd6f4;
}

#workspaces,
#clock,
#pulseaudio,
#memory,
#cpu,
#network,
#tray,
#window,
#custom-launcher,
#custom-power,
#custom-pacman,
#battery {
    background-color: #1e1e2e;
    padding: 2px 12px;
    margin: 4px 4px;
    border-radius: 10px;
    border: 1px solid #313244;
}

#workspaces button {
    padding: 0 5px;
    background-color: transparent;
    color: #6c7086;
}

#workspaces button.active {
    color: #a6e3a1;
}

#workspaces button:hover {
    background: rgba(0, 0, 0, 0.2);
    box-shadow: inherit;
    text-shadow: inherit;
    color: #fab387;
}

#workspaces button.focused {
    color: #89b4fa;
}

#workspaces button.urgent {
    color: #f38ba8;
}

#custom-launcher {
    color: #89b4fa;
    padding-right: 15px;
}

#custom-launcher .logo {
    font-size: 18px;
}

#custom-launcher .user-host {
    font-size: 12px;
}

#custom-power {
    color: #f38ba8;
    font-size: 16px;
    padding-right: 15px;
}

#clock {
    color: #fab387;
}

#pulseaudio {
    color: #f9e2af;
}

#pulseaudio.muted {
    color: #6c7086;
}

#network {
    color: #a6e3a1;
}

#network.disconnected {
    color: #f38ba8;
}

#cpu {
    color: #89b4fa;
}

#memory {
    color: #cba6f7;
}

#tray {
    color: #b4befe;
}

#window {
    font-weight: bold;
    color: #cdd6f4;
}

